--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,11 @@
 }
 
 body {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.bg-lightGrey {
+    background-color: rgba(238, 235, 235, 0.788);
 }
 
 .pageHeader {
@@ -18,7 +22,8 @@ body {
 
 .pHeaderPage {
     padding: 20px;
-    margin: 0 320px 50px;
+    margin: 0 320px;
+    font-size: 22px;
 }
 
 
